trunk/Archive2/31/5bbfc8ebee7c97/output
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:64:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/ios:40,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/stl_pair.h: In instantiation of 'constexpr std::pair<_T1, _T2>::pair(const std::pair<_U1, _U2>&) [with _U1 = int; _U2 = boost::assign_detail::generic_list<std::pair<int, const char*> >; <template-parameter-2-3> = void; _T1 = const int; _T2 = std::map<int, std::basic_string<char> >]':
/usr/local/include/c++/4.9.2/ext/new_allocator.h:120:4:   required from 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::pair<const int, std::map<int, std::basic_string<char> > >; _Args = {std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >&}; _Tp = std::_Rb_tree_node<std::pair<const int, std::map<int, std::basic_string<char> > > >]'
/usr/local/include/c++/4.9.2/bits/alloc_traits.h:253:4:   required from 'static std::_Require<typename std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::type> std::allocator_traits<_Alloc>::_S_construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = std::pair<const int, std::map<int, std::basic_string<char> > >; _Args = {std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >&}; _Alloc = std::allocator<std::_Rb_tree_node<std::pair<const int, std::map<int, std::basic_string<char> > > > >; std::_Require<typename std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::type> = void]'
/usr/local/include/c++/4.9.2/bits/alloc_traits.h:399:57:   required from 'static decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) std::allocator_traits<_Alloc>::construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = std::pair<const int, std::map<int, std::basic_string<char> > >; _Args = {std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >&}; _Alloc = std::allocator<std::_Rb_tree_node<std::pair<const int, std::map<int, std::basic_string<char> > > > >; decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) = <type error>]'
/usr/local/include/c++/4.9.2/bits/stl_tree.h:423:42:   required from 'std::_Rb_tree_node<_Val>* std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_create_node(_Args&& ...) [with _Args = {std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >&}; _Key = int; _Val = std::pair<const int, std::map<int, std::basic_string<char> > >; _KeyOfValue = std::_Select1st<std::pair<const int, std::map<int, std::basic_string<char> > > >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, std::basic_string<char> > > >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type = std::_Rb_tree_node<std::pair<const int, std::map<int, std::basic_string<char> > > >*]'
/usr/local/include/c++/4.9.2/bits/stl_tree.h:1143:66:   [ skipping 2 instantiation contexts, use -ftemplate-backtrace-limit=0 to disable ]
/usr/local/include/c++/4.9.2/bits/stl_tree.h:1843:37:   required from 'void std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_insert_unique(_II, _II) [with _InputIterator = std::_Deque_iterator<std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >, std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >&, std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >*>; _Key = int; _Val = std::pair<const int, std::map<int, std::basic_string<char> > >; _KeyOfValue = std::_Select1st<std::pair<const int, std::map<int, std::basic_string<char> > > >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, std::basic_string<char> > > >]'
/usr/local/include/c++/4.9.2/bits/stl_map.h:255:11:   required from 'std::map<_Key, _Tp, _Compare, _Alloc>::map(_InputIterator, _InputIterator) [with _InputIterator = std::_Deque_iterator<std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >, std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >&, std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >*>; _Key = int; _Tp = std::map<int, std::basic_string<char> >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, std::basic_string<char> > > >]'
/usr/local/include/boost/assign/list_of.hpp:163:46:   required from 'Container boost::assign_detail::converter<DerivedTAssign, Iterator>::convert(const Container*, boost::assign_detail::default_type_tag) const [with Container = std::map<int, std::map<int, std::basic_string<char> > >; DerivedTAssign = boost::assign_detail::generic_list<std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > > >; Iterator = std::_Deque_iterator<std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >, std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >&, std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >*>]'
/usr/local/include/boost/assign/list_of.hpp:142:27:   required from 'Container boost::assign_detail::converter<DerivedTAssign, Iterator>::convert_to_container() const [with Container = std::map<int, std::map<int, std::basic_string<char> > >; DerivedTAssign = boost::assign_detail::generic_list<std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > > >; Iterator = std::_Deque_iterator<std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >, std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >&, std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >*>]'
/usr/local/include/boost/assign/list_of.hpp:436:81:   required from 'boost::assign_detail::generic_list<T>::operator Container() const [with Container = std::map<int, std::map<int, std::basic_string<char> > >; T = std::pair<int, boost::assign_detail::generic_list<std::pair<int, const char*> > >]'
main.cpp:11:41:   required from here
/usr/local/include/c++/4.9.2/bits/stl_pair.h:125:39: error: call of overloaded 'map(const boost::assign_detail::generic_list<std::pair<int, const char*> >&)' is ambiguous
  : first(__p.first), second(__p.second) { }
                                       ^
/usr/local/include/c++/4.9.2/bits/stl_pair.h:125:39: note: candidates are:
In file included from /usr/local/include/c++/4.9.2/map:61:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/bits/stl_map.h:216:7: note: std::map<_Key, _Tp, _Compare, _Alloc>::map(const allocator_type&) [with _Key = int; _Tp = std::basic_string<char>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::basic_string<char> > >; std::map<_Key, _Tp, _Compare, _Alloc>::allocator_type = std::allocator<std::pair<const int, std::basic_string<char> > >]
       map(const allocator_type& __a)
       ^
/usr/local/include/c++/4.9.2/bits/stl_map.h:208:7: note: std::map<_Key, _Tp, _Compare, _Alloc>::map(std::initializer_list<std::pair<const _Key, _Tp> >, const _Compare&, const allocator_type&) [with _Key = int; _Tp = std::basic_string<char>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::basic_string<char> > >; std::map<_Key, _Tp, _Compare, _Alloc>::allocator_type = std::allocator<std::pair<const int, std::basic_string<char> > >]
       map(initializer_list<value_type> __l,
       ^
/usr/local/include/c++/4.9.2/bits/stl_map.h:193:7: note: std::map<_Key, _Tp, _Compare, _Alloc>::map(std::map<_Key, _Tp, _Compare, _Alloc>&&) [with _Key = int; _Tp = std::basic_string<char>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::basic_string<char> > >]
       map(map&& __x)
       ^
/usr/local/include/c++/4.9.2/bits/stl_map.h:182:7: note: std::map<_Key, _Tp, _Compare, _Alloc>::map(const std::map<_Key, _Tp, _Compare, _Alloc>&) [with _Key = int; _Tp = std::basic_string<char>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::basic_string<char> > >]
       map(const map& __x)
       ^
/usr/local/include/c++/4.9.2/bits/stl_map.h:171:7: note: std::map<_Key, _Tp, _Compare, _Alloc>::map(const _Compare&, const allocator_type&) [with _Key = int; _Tp = std::basic_string<char>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::basic_string<char> > >; std::map<_Key, _Tp, _Compare, _Alloc>::allocator_type = std::allocator<std::pair<const int, std::basic_string<char> > >]
       map(const _Compare& __comp,
       ^
